packages/taquito-michel-codec/test/contracts_013/ill_typed/view_op_lazy_storage_type.tz
parameter address;
storage (big_map string nat);
code {
       CAR;
       UNIT;
       VIEW "get_map" (big_map string nat);
       IF_SOME { PUSH nat 10 ; SOME ; PUSH string "bar"; UPDATE; NIL operation; PAIR; } { FAIL; }
     }
